Improve amr bitrate calculation for VBR files.

Fixes ticket #3541.